# evolve

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
docs/: BUILD_PLAN.md  CURRENT_STATUS.md  IMPLEMENTATION.md  LANGUAGE.md  PROJECT_STATE.md
docs/implementation/: runtime_for_codegen.md
src/: agent.rs  atom.rs  condition.rs  core.rs  devtools.rs  env.rs  error.rs  eval.rs  expander.rs  formatter.rs  hir.rs  interner.rs  lib.rs  main.rs  reader.rs  repl.rs  runtime.rs  stm.rs  symbol.rs  test_runner.rs  utils.rs  value.rs
src/codegen/: mod.rs  value.rs
src/codegen_runtime/: closure.rs  dispatch.rs  error.rs  list.rs  map.rs  memory.rs  mod.rs  namespace.rs  native.rs  quote.rs  set.rs  string.rs  value.rs  var.rs  vector.rs
src/collections/: list.rs  map.rs  mod.rs  set.rs  vector.rs
src/core/: metadata.rs  mod.rs  module_loader.rs  namespace.rs  native_fns.rs  recur.rs  special_forms.rs  symbol.rs  var.rs
src/evaluator/: mod.rs
tests/: codegen.rs  concurrency.rs  diagnostics.rs  macros.rs  namespaces.rs
