[package]
name = "evolve"
version = "0.1.0"
edition = "2024"
authors = ["Elia Scotto (hello@scotto.me)"]

[[bin]]
name = "evolve"
path = "src/main.rs"

[features]
default = []
codegen = ["inkwell"]

[dependencies]
itertools = "0.14.0"
logos = "0.15.1"
once_cell = "1.21.3"
rustc-hash = "2.1.1"
rustyline = "17.0.2"
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
